e2e/tests/all/snapshots/calendar-month_rest_desktop.snap
---
source: e2e/src/suite.rs
assertion_line: 618
description: calendar-month at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
button "Previous year"
button "2026" [live=polite]
  StaticText "2026"
button "Next year"
grid "2026"
  row "January 2026 February 2026 March 2026"
    gridcell "January 2026" [selected=false]
      button "January 2026"
        StaticText "Jan"
    gridcell "February 2026" [selected=false]
      button "February 2026"
        StaticText "Feb"
    gridcell "March 2026" [selected]
      button "March 2026" [current=date]
        StaticText "Mar"
  row "April 2026 May 2026 June 2026"
    gridcell "April 2026" [selected=false]
      button "April 2026"
        StaticText "Apr"
    gridcell "May 2026" [selected=false]
      button "May 2026"
        StaticText "May"
    gridcell "June 2026" [selected=false]
      button "June 2026"
        StaticText "Jun"
  row "July 2026 August 2026 September 2026"
    gridcell "July 2026" [selected=false]
      button "July 2026"
        StaticText "Jul"
    gridcell "August 2026" [selected=false]
      button "August 2026"
        StaticText "Aug"
    gridcell "September 2026" [selected=false]
      button "September 2026"
        StaticText "Sep"
  row "October 2026 November 2026 December 2026"
    gridcell "October 2026" [selected=false]
      button "October 2026"
        StaticText "Oct"
    gridcell "November 2026" [selected=false]
      button "November 2026"
        StaticText "Nov"
    gridcell "December 2026" [selected=false]
      button "December 2026"
        StaticText "Dec"
button "After"
  StaticText "After"
