e2e/tests/all/snapshots/carousel_advanced_desktop.snap
---
source: e2e/src/suite.rs
description: carousel at desktop (advanced)
expression: tree
---
region "Slide content" [roledescription=carousel]
  status [atomic] [live=polite]
    StaticText "Slide 2 of 3"
  group "Slide content"
    description "Slide 2 of 3"
    group "2 of 3" [roledescription=slide]
      paragraph
        StaticText "The second slide, and nothing to press on it."
  button "Previous slide"
  button "Next slide"
  group "Choose slide"
    button "Go to slide 1"
    button "Go to slide 2" [current=true]
    button "Go to slide 3"
--> aria-controls [id="lsx-N"] (rendered above)
