e2e/tests/all/snapshots/carousel_advanced_mobile.snap
---
source: e2e/src/suite.rs
description: carousel at mobile (advanced)
expression: tree
---
region "Slide content"
  status [atomic] [live=polite]
    StaticText "Slide 2 of 3"
  group "Slide content"
    group "2 of 3"
      paragraph
        StaticText "The second slide, and nothing to press on it."
  button "Previous slide"
  button "Next slide"
  group "Choose slide"
    button "Go to slide 1"
    button "Go to slide 2" [current=true]
    button "Go to slide 3"
--> aria-controls [id="lsx-N"] (rendered above)
