e2e/tests/all/snapshots/carousel_rest_desktop.snap
---
source: e2e/src/suite.rs
description: carousel at desktop (rest)
expression: tree
---
region "Slide content" [roledescription=carousel]
  status [atomic] [live=polite]
    StaticText "Slide 1 of 3"
  group "Slide content"
    description "Slide 1 of 3"
    group "1 of 3" [roledescription=slide]
      LabelText
        StaticText "Note"
      textbox "Note" = carousel
        StaticText "carousel"
      slider "Volume" = 40 [orientation=horizontal] [valuemax=100] [valuemin=0]
        description "40"
      slider "Raw range" = 50 [orientation=horizontal] [valuemax=100] [valuemin=0] [valuetext=50]
      radiogroup "Raw choice"
        radio "A" [checked]
        radio "B" [checked=false]
      button "Plain button"
        StaticText "Plain button"
  button "Previous slide" [disabled]
  button "Next slide"
  group "Choose slide"
    button "Go to slide 1" [current=true]
    button "Go to slide 2"
    button "Go to slide 3"
--> aria-controls [id="lsx-N"] (rendered above)
